--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p>
           This project's inception began in the late December of 2022. In our Orange 5B group, members consisted of Alisha, Sadrah, and myself. Brainstorming modern ideas pertaining to social and environmental issues, we settled on climate change. For some time, we were moving in different directions. I decided to focus on the unfortunate yet necessary environmental sector, particularly affecting developing countries. A cause and effect model can be seen here:
         </p>
-    
+    <img src="" alt="Manufacturing and Production Causal Analysis">
       
   </body>
 </html>
