--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       In this short Stop Motion animation, a story about a regular camper turns real. From a normal campfire, this fire burns to reach the high levels of the forest.
       </p>
       
+      <video width="500" height="300" autoplay>
+    
       <h2>How Did We Get Here?</h2>
         <p>
           This project's inception began in the late December of 2022. In our Orange 5B group, members consisted of Alisha, Sadrah, and myself. Brainstorming modern ideas pertaining to social and environmental issues, we settled on climate change. For some time, we were moving in different directions. I decided to focus on the unfortunate yet necessary environmental sector, particularly affecting developing countries. A cause and effect model can be seen here:
