--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name=”author” content=”Parth Gokhale”>
     <title>Stop Motion: Clay to Code</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Animation Project CSS">
   </head>
   <body>
 
