--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name=”author” content=”Parth Gokhale”>
     <title>Stop Motion: Clay to Code</title>
-    <link rel="stylesheet" href="Animation Project CSS">
+    <link rel="stylesheet" href="AnimationProjectCSS">
   </head>
   <body>
 
@@ -19,6 +19,7 @@
       </p>
       
       <video width="500" height="300" autoplay>
+        <source src="SMPAP_ The_Fire.mp4" type="video/mp4">
     
       <h2>How Did We Get Here?</h2>
         <p>
