--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       
       <video width="500" height="300" autoplay>
         <source src="SMPAP_ The_Fire.mp4" type="video/mp4">
+    </video>
     
       <h2>How Did We Get Here?</h2>
         <p>
