--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       In this short Stop Motion animation, a story about a regular camper turns real. From a normal campfire, this fire burns to reach the high levels of the forest.
       </p>
       
-      <video width="500" height="300" autoplay>
-        <source src="SMPAP_ The_Fire.mp4" type="video/mp4">
+      <video width="500" height="300" controls>
+        <source src="SMPAPTheFire.mp4" type="video/mp4">
     </video>
     
       <h2>How Did We Get Here?</h2>
