--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ The story ends when the protagonist, a hiker, comes into view, a black landscape
       For the technology and code segment, I helped to adjust the camera in terms of zoom, fine focus, and exposure for different scenes. I helped to take the photos for the first few scenes, and I also worked on getting the software ready to use on the iMacs that we used, downloading to my Google Drive and loading it back up to the desktop whenever we needed it. In terms of lighting, I did not use the programmable LED circuit board much, and in the end it was not quite utilizable for our setting. We ended up using an LED video light, for which we could adjust the hues for the colors, and the brightness depending on the scene. For those aspects, Alisha and Sadrah mostly worked on the lighting, using code to make the lighting adjustable on the strobe light. Ultimately though, we used the LED video light.
     </p>
     
-    <h2>Conclusion<h2>
+    <h2>Conclusion</h2>
       <p>
         This project was quite enjoyable to work with. We created a story, a set, characters, and used technology to convert it into a multimedia project. This website itself is the ultimate product of our hard work. Thank you for going through our content, and keep scrolling for some behind the scenes photos!
       </p>
