--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@ The story ends when the protagonist, a hiker, comes into view, a black landscape
       <p>
         This project was quite enjoyable to work with. We created a story, a set, characters, and used technology to convert it into a multimedia project. This website itself is the ultimate product of our hard work. Thank you for going through our content, and keep scrolling for some behind the scenes photos!
       </p>
-      <img src="behindthescenes1.jpg" alt="DragonFrame Frames" class="center>
-      <img src="behindthescenes2.jpg" alt="Storyboard Photo" class="center>
-      <img src="behindthescenes3.jpg" alt="Adjusting" class="center>
-      <img src="behindthescenes4.jpg" alt="Filming" class="center>
-      <img src="behindthescenes5.jpg" alt="At Work" class="center>
+      <img src="behindthescenes1.jpg" alt="DragonFrame Frames" class="center">
+      <img src="behindthescenes2.jpg" alt="Storyboard Photo" class="center">
+      <img src="behindthescenes3.jpg" alt="Adjusting" class="center">
+      <img src="behindthescenes4.jpg" alt="Filming" class="center">
+      <img src="behindthescenes5.jpg" alt="At Work" class="center">
   </body>
 </html>
