--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p>
           This project's inception began in the late December of 2022. In our Orange 5B group, members consisted of Alisha, Sadrah, and myself. Brainstorming modern ideas pertaining to social and environmental issues, we settled on climate change. For some time, we were moving in different directions. I decided to focus on the unfortunate yet necessary environmental sector, particularly affecting developing countries. A cause and effect model can be seen here:
         </p>
-    <img src="ParthGokhale-ManufacturingandProductionCausalAnalysis.jpg" alt="Manufacturing and Production Causal Analysis" width="500" height="400">
+    <img src="ParthGokhale-ManufacturingandProductionCausalAnalysis.jpg" alt="Manufacturing and Production Causal Analysis" width="500" height="400" class="center">
       <p>
         All of us had different ideas, but finally we selected Alisha's idea, and after much discussion, decided to commit to a Stop Motion Animation. Initially, we thought of making a Zoetrope model, but we decided against it. Alisha's causal effect analysis can be seen here:
       </p>
